Add btn and product cards

--- a/index.html
+++ b/index.html
@@ -19,5 +19,57 @@
         🛒 <span>0</span>
       </button>
     </nav>
+
+    <main class="container">
+      <section class="btns">
+        <button id="add-sample-btn" class="add-card btn-yellow" style="border-radius: 8px; padding: 10px 20px;">
+          ＋ Add Sample Product
+        </button>
+      </section>
+
+      <section id="products-grid-top" class="grid-three-col rounded-cards">
+        <a href="./single-product.html" class="rounded-card">
+          <div class="img-wrapper">
+            <img src="./img/photo-1.jpg" alt="Wireless Headphones Baby Pink" />
+          </div>
+          <div class="card-content">
+            <h3>Premium Wireless Headphones High-End Noise Cancelling</h3>
+            <p>Som de alta fidelidade com cancelamento de ruído ativo e bateria de longa duração para viagens.</p>
+            <div class="card-footer">
+              <span>$299.99</span>
+              <button class="add-cart">Add</button>
+            </div>
+          </div>
+        </a>
+
+        <a href="./single-product.html" class="rounded-card">
+          <div class="img-wrapper">
+            <img src="./img/photo-2.jpg" alt="Fitness Watch" />
+          </div>
+          <div class="card-content">
+            <h3>Smart Fitness Watch</h3>
+            <p>Monitoramento completo.</p>
+            <div class="card-footer">
+              <span>$249.99</span>
+              <button class="add-cart">Add</button>
+            </div>
+          </div>
+        </a>
+
+        <a href="./single-product.html" class="rounded-card">
+          <div class="img-wrapper">
+            <img src="./img/photo-3.jpg" alt="Camera Kit" />
+          </div>
+          <div class="card-content">
+            <h3>Professional Camera Kit</h3>
+            <p>O kit completo para fotógrafos que buscam a perfeição.</p>
+            <div class="card-footer">
+              <span>$1,299.99</span>
+              <button class="add-cart">Add</button>
+            </div>
+          </div>
+        </a>
+      </section>
+    </main>
   </body>
 </html>
