Removed inline css from button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <main class="container">
       <section class="btns">
-        <button id="add-sample-btn" class="add-card btn-yellow" style="border-radius: 8px; padding: 10px 20px;">
+        <button id="add-sample-btn" class="add-card btn-yellow">
           ＋ Add Sample Product
         </button>
       </section>
