--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
             <div class="form-group">
                 <label for="description">Description</label>
-                <textarea id="description" name="description"  rows="3" placeholder="Descrição do produto" required minlength="10"></textarea>
+                <textarea id="description" name="description"  rows="3" placeholder="Product Description" required minlength="10"></textarea>
                 <p class="error-form" id="error-description"></p>
             </div>
             <div class="form-group">
@@ -62,7 +62,7 @@
                 </div>
                 <p class="error-form" id="error-price"></p>
             </div>
-            <button type="submit" class="buy btn-yellow ">Add Product</button>
+            <button type="submit" class="buy btn-yellow ">+ Add Product</button>
         </form>
       </div>
     </div>
