Updated right navbar (github)

--- a/public/index.html
+++ b/public/index.html
@@ -13,9 +13,9 @@
         <input type="text" placeholder="Buscar produtos..." id="product-search">
         <button class="btn-search btn-yellow">Search</button>
       </div>
-      <button class="cart-icon" id="cart-icon">
-        🛒 <span>0</span>
-      </button>
+      <a href="https://github.com/jessiicasantos/acadia-frontend-dev" target="_blank" class="right-icon" id="right-icon" title="Github Repository">
+        <img src="./img/github-logo.png"  alt="Github Logo White">
+      </a>
     </nav>
 
     <main class="container">
