Updated: Currency validation added to price

--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
                 <label for="price">Price</label>
                 <div class="input-wrapper">
                   <span class="currency-prefix">$</span>
-                  <input type="text" value="0.00" id="price" name="price" placeholder="10.00">
+                  <input type="number" id="price" name="price" placeholder="10.00">
                 </div>
                 <p class="error-form" id="error-price"></p>
             </div>
