Translate search for english

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <nav class="navbar">
       <a href="./" class="logo">Product Store</a>
       <div class="light-search">
-        <input type="text" placeholder="Buscar produtos..." id="product-search">
+        <input type="text" placeholder="Search for products..." id="product-search">
         <button class="btn-search btn-yellow">Search</button>
       </div>
       <a href="https://github.com/jessiicasantos/acadia-frontend-dev" target="_blank" class="right-icon" id="right-icon" title="Github Repository">
