--- a/public/index.html
+++ b/public/index.html
@@ -41,12 +41,12 @@
         <form id="product-form" class="card-content">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input type="text" id="title" name="title" placeholder="Title">
+                <input type="text" id="title" name="title" placeholder="Title" />
                 <p class="error-form" id="error-title"></p>
             </div>
             <div class="form-group">
                 <label for="image">Image</label>
-                <input type="file" id="image" name="image" accept="image/*">
+                <input type="file" id="image" name="image" accept="image/*" />
                 <p class="error-form" id="error-image"></p>
             </div>
             <div class="form-group">
@@ -57,8 +57,7 @@
             <div class="form-group">
                 <label for="price">Price</label>
                 <div class="input-wrapper">
-                  <span class="currency-prefix">$</span>
-                  <input type="number" id="price" name="price" placeholder="10.00">
+                  <input type="text" id="price" name="price" placeholder="10.00" value="$ 0.00" maxlength=" 11" />
                 </div>
                 <p class="error-form" id="error-price"></p>
             </div>
