Added cart logic

--- a/public/index.html
+++ b/public/index.html
@@ -61,7 +61,7 @@
                 </div>
                 <p class="error-form" id="error-price"></p>
             </div>
-            <button type="submit" class="buy btn-yellow ">+ Add Product</button>
+            <button type="submit" class="btn-yellow ">+ Add Product</button>
         </form>
       </div>
     </div>
@@ -77,7 +77,7 @@
       </div>
       <div class="cart-footer">
         <span class="total"> Total: <em>$0.00</em> </span>
-        <button class="buy btn-yellow">Buy</button>
+        <button class="buy btn-yellow" id="cart-buy">Buy</button>
       </div>
     </aside>
     
